# agent-switch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ccswitch-compat.md  mcp-registry.md  recovery.md  roadmap.md  secrets-and-wrappers.md
docs/plans/: 2026-07-12-agent-takeover-secret-ui-plan.md
macos-app/AgentSwitch/: CLAUDE.md  Package.swift  install.sh
macos-app/AgentSwitch/AgentSwitch/: AgentSwitchApp.swift  ContentView.swift
macos-app/AgentSwitch/AgentSwitch.xcodeproj/: project.pbxproj
macos-app/AgentSwitch/AgentSwitch/DesignSystem/Components/: DSComponents.swift
macos-app/AgentSwitch/AgentSwitch/DesignSystem/Tokens/: DSTokens.swift
macos-app/AgentSwitch/AgentSwitch/Features/Agents/: AgentsView.swift
macos-app/AgentSwitch/AgentSwitch/Features/CLIs/: CLIsView.swift
macos-app/AgentSwitch/AgentSwitch/Features/Skills/: SkillsView.swift
macos-app/AgentSwitch/AgentSwitch/Models/: AgentModels.swift
macos-app/AgentSwitch/AgentSwitch/Navigation/: SidebarView.swift
macos-app/AgentSwitch/AgentSwitch/Resources/: L10n.swift
macos-app/AgentSwitch/AgentSwitch/Services/: AgentSwitchService.swift  AppState.swift
scripts/: build-release.sh  install.sh  privacy_scan.py
src/agent_switch/: __init__.py  agents.py  atomic.py  cli.py  cli_inventory.py  instructions.py  paths.py  skill_inventory.py  targets.py
src/agent_switch/ccswitch/: __init__.py  db.py  deeplink.py  imports.py
src/agent_switch/config/: __init__.py  loader.py  model.py  routes.py  store.py
src/agent_switch/mcp/: __init__.py  bird_server.py  imports.py  registry.py  simple_stdio.py  specs.py  templates.py  wrappers.py  xcli_server.py
src/agent_switch/reconcile/: __init__.py  apply.py  doctor.py  planner.py  state.py
src/agent_switch/renderers/: __init__.py  claude.py  claude_desktop.py  codex.py  common.py  hermes.py
src/agent_switch/security/: __init__.py  redaction.py  secrets.py
src/agent_switch/status/: __init__.py  dashboard.py  report.py
tests/: test_agents.py  test_atomic_redaction.py  test_ccswitch_db.py  test_cli.py  test_cli_inventory.py  test_config_and_secrets.py  test_dashboard.py  test_deeplink.py  test_docs.py  test_instructions_skill_hub.py  test_local_mcp_servers.py  test_mcp_registry.py  test_renderers.py  test_secret_storage.py  test_skill_inventory.py  test_version.py  test_wrappers_and_specs.py
tests/integration/: test_reconcile_fixture_home.py
(+4 files in other folders)
