[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-switch"
version = "0.1.1"
description = "Local Agent Switch runtime for agent-owned MCP tools, wrappers, and drift repair."
requires-python = ">=3.11"
dependencies = []

[project.urls]
Repository = "https://github.com/JNHFlow21/agent-switch"

[project.scripts]
agent-switch = "agent_switch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
