[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-switch"
version = "0.2.0"
description = "Local control plane for AI agents, MCP servers, Skills, CLI tools, and secrets."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["ai-agents", "mcp", "model-context-protocol", "codex", "claude-code", "hermes", "skills", "secrets", "macos"]
requires-python = ">=3.11"
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/JNHFlow21/agent-switch"
Documentation = "https://github.com/JNHFlow21/agent-switch#readme"
Issues = "https://github.com/JNHFlow21/agent-switch/issues"
Repository = "https://github.com/JNHFlow21/agent-switch"

[project.scripts]
agent-switch = "agent_switch.cli:main"
agent-switch-mcp-bird = "agent_switch.mcp.bird_server:main"
agent-switch-mcp-xcli = "agent_switch.mcp.xcli_server:main"

[tool.setuptools.packages.find]
where = ["src"]
